11Aug17=======================================================================
1. Add default systemd service file file
10Aug17=======================================================================
1. check for disconnecting flag in more places
31Jul17=======================================================================
1. Fixed create_usdb.pl path specifications
2. add CTY-2708 prefixes
12May17=======================================================================
1. Fix sh/425 (mostly)
2. Add CTY-2706 prefixes
05May17=======================================================================
1. Add CTY-2705 prefixes
04Apr17=======================================================================
1. Add CTY-2704 prefixes
17Mar17=======================================================================
1. Add latest cty.dat & wpxloc.raw
21Feb17=======================================================================
1. Fix sh/dx on 14050 so that it does what one expects.
2. Add CTY-2702 prefixes
15Feb17=======================================================================
1. Update UPGRADE.mojo a bit
2. Add local::lib so that it can be used for non-root installations.
09Jan17=======================================================================
1. Fix mojo branch clean install issues (failing to find $main::data et al)
02Jan17=======================================================================
1. Add CTY-2615 prefixes
2. Add rbn.pl - an experimental rbn deduplicating spot filter. 
26Dec16=======================================================================
1. Fix some possible routes to $myalias callsigns becoming nodes.
22Nov16=======================================================================
1. Add CTY-2614 prefixes
21Nov16=======================================================================
1. Add CTY-2613 prefixes
17Nov16=======================================================================