@@ -1,4 +1,4 @@
 {
   perldoc => 1,
-  secrets => ['ac82f00b5490aa599f88feafe6b3af4014aefb5a']
+  secrets => ['24b654c7cfab0585e42c3a8308755fb29757d70a']
 }
