@@ -1,3 +1,6 @@
+26Aug17=======================================================================
+1. Start (serious) work on web interface. Make the necessary changes to allow
+   a local webserver to connect and get its own style of messages.
 11Aug17=======================================================================
 1. Add default systemd service file file
 10Aug17=======================================================================
